welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
  vuBiscuit= false
  ^Program:6: error: not found: value vuBiscuit
      vuBiscuit= true
      ^Program:12: error: not found: value vuBiscuit
  return vuBiscuit
         ^